fix mobile overflow issue

--- a/src/resources/postcss/tribe-common-admin.pcss
+++ b/src/resources/postcss/tribe-common-admin.pcss
@@ -2701,6 +2701,7 @@ input[type="email"].tribe-events-admin-card__input {
 	@media screen and (max-width: 480px) {
 		flex-direction: column;
 		align-items: flex-start;
+		overflow: hidden;
 	}
 }
 
